- The ``voronoi_polygons`` now accepts the ``ordered`` keyword, optionally forcing the
  order of polygons within the GeometryCollection to follow the order of input
  coordinates. Requires at least GEOS 3.12. (#1968)
- Add option on ``invalid="fix"`` to ``from_wkb`` and ``from_wkt`` (#2094)
- Add function ``minimum_clearance_line`` (#2106)
- Add function ``maximum_inscribed_circle`` (#1307)

Breaking changes in GEOS 3.12:

- ``oriented_envelope`` / ``minimum_rotated_rectangle`` changed its implementation
  in GEOS 3.12. Be aware that results will change when updating GEOS. Coincidentally
  the implementation is similar to the shapely 1.x approach. (#1885)
- ``get_coordinate_dimension`` / ``has_z`` now considers geometries three dimensional if
  they have a NaN z coordinate. (#1885)
- ``voronoi_polygons`` changed its output from a LINESTRING to a MULTILINESTRING in case
  ``only_edges=True``. (#1885)
- The WKT representation of a MULTIPOINT changed from for example "MULTIPOINT (0 0, 1 1)"
  to "MULTIPOINT ((0 0), (1 1))". (#1885)

Deprecations:

- The ``shapely.geos`` module is deprecated. All GEOS-version related attributes are
  available directly from the top-level ``shapely`` namespace as well (already since
  shapely 2.0) (#2145).
- The ``shapely.vectorized`` module is deprecated. The two functions (``contains and
  ``touches``) can be replaced by the top-level vectorized functions ``contains_xy``
  and ``intersects_xy`` (#1630).

Packaging:

- Binary wheels are now built for musllinux (Alpine) x86_64 platforms (#1996).

2.0.7 (2025-01-30)
------------------

Bug fixes:

- Fix compilation error on certain Linux platforms, such as Alpine (#1945).
- Fixes crash when reading nonlinear geometry types (CircularString,
  CompoundCurve, MultiCurve, CurvePolygon, MultiSurface) from WKB/WKT with
  GEOS >= 3.13; these types are not yet supported in Shapely and now raise a
  ``NotImplementedError`` (#2160)
- Fix the ``project`` method to return a Python float (#2093).
