@@ -2,8 +2,6 @@
 
 import numpy as np
 
-import shapely
-
 
 def signed_area(ring):
     """Return the signed area enclosed by a ring in linear time.
@@ -13,8 +11,3 @@ def signed_area(ring):
     coords = np.array(ring.coords)[:, :2]
     xs, ys = np.vstack([coords, coords[1]]).T
     return np.sum(xs[1:-1] * (ys[2:] - ys[:-2])) / 2.0
-
-
-def is_ccw_impl(name=None):
-    """Predicate implementation."""
-    return shapely.is_ccw
