@@ -3,7 +3,7 @@
 import numpy as np
 
 import shapely
-from shapely.algorithms.cga import is_ccw_impl, signed_area
+from shapely.algorithms.cga import signed_area
 from shapely.errors import TopologicalError
 from shapely.geometry.base import BaseGeometry
 from shapely.geometry.linestring import LineString
@@ -119,8 +119,8 @@ class LinearRing(LineString):
 
     @property
     def is_ccw(self):
-        """True is the ring is oriented counter clock-wise."""
-        return bool(is_ccw_impl()(self))
+        """True if the ring is oriented counter clock-wise."""
+        return bool(shapely.is_ccw(self))
 
     @property
     def is_simple(self):
